minio/minio.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-deployment
  template:
    metadata:
      labels:
        app: minio-deployment
    spec:
      containers:
      - name: minio
        image: minio/minio:latest
        args:
        - server
        - /mnt/data
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: minio-blob-volume
          mountPath: /mnt/data
      volumes:
      - name: minio-blob-volume
        persistentVolumeClaim:
          claimName: minio-pvc
