minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-minio
  namespace: minio
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 32221
  selector:
    app: minio

---

apiVersion: v1
kind: Service
metadata:
  name: ui-minio
  namespace: minio
spec:
  type: NodePort
  ports:
    - port: 44737
      targetPort: 44737
      nodePort: 32222
  selector:
    app: minio
